infra/docker-swarm/terraform/network.tf
# Create a VPC to launch our instances into
resource "aws_vpc" "default" {
  cidr_block           = "172.16.0.0/16"
  enable_dns_hostnames = true
}

# Create an internet gateway to give our subnet access to the outside world
resource "aws_internet_gateway" "default" {
  vpc_id = aws_vpc.default.id
}

# Grant the VPC internet access on its main route table
resource "aws_route" "internet_access" {
  route_table_id         = aws_vpc.default.main_route_table_id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.default.id
}

# Create a subnet to launch our instances into
resource "aws_subnet" "default" {
  vpc_id                  = aws_vpc.default.id
  cidr_block              = "172.16.0.0/16"
  availability_zone       = var.aws_availability_zone
  map_public_ip_on_launch = true
}
